--- a/package.json
+++ b/package.json
@@ -3,21 +3,35 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "heroku-postbuild": "ng build --prod"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.0.0",
+    "@angular/cdk": "^12.2.13",
     "@angular/common": "~12.0.0",
     "@angular/compiler": "~12.0.0",
     "@angular/core": "~12.0.0",
     "@angular/forms": "~12.0.0",
+    "@angular/material": "^12.2.13",
     "@angular/platform-browser": "~12.0.0",
     "@angular/platform-browser-dynamic": "~12.0.0",
     "@angular/router": "~12.0.0",
+    "@swimlane/ngx-graph": "^8.0.2",
+    "angular-split": "^13.2.0",
+    "d3-dispatch": "^3.0.1",
+    "d3-drag": "^3.0.0",
+    "d3-scale": "^4.0.2",
+    "d3-shape": "^3.1.0",
+    "d3-timer": "^3.0.1",
+    "dagre": "^0.8.5",
+    "express": "^4.18.1",
+    "monaco-editor": "^0.24.0",
+    "ngx-monaco-editor": "^12.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
@@ -26,6 +40,11 @@
     "@angular-devkit/build-angular": "~12.0.0",
     "@angular/cli": "~12.0.0",
     "@angular/compiler-cli": "~12.0.0",
+    "@types/d3-dispatch": "^3.0.1",
+    "@types/d3-drag": "^3.0.1",
+    "@types/d3-shape": "^3.1.0",
+    "@types/d3-timer": "^3.0.0",
+    "@types/dagre": "^0.7.48",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.7.0",
